--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
 })();
 </script>
     <!-- Tanılama / Ağ Hatası Yüzeyleme -->
-    <script id="diagnostics">
+(    <script id="diagnostics">
 (function(){
   function showErr(msg){
     try {
@@ -786,6 +786,8 @@
     console.warn('[KAIRA] Mikrofon/TTS için HTTPS önerilir.');
   }
 })();
+
+</script>
 <script id="chat-logger">
 (function(){
   // Sunucu kökü (senin ngrok adresin)
