--- a/index.html
+++ b/index.html
@@ -318,10 +318,6 @@
                     <h2 class="text-3xl font-serif font-semibold text-cyan-400 mb-3">Digital Afterlife</h2>
                     <p class="text-slate-400">Zihnin biyolojiye hapis olmadığı, anıların sonsuza dek yaşadığı felsefi bir yolculuğu keşfet.</p>
                 </div>
-                <div id="select-demo" class="choice-card glass-container rounded-2xl p-8 cursor-pointer">
-                    <h2 class="text-3xl font-serif font-semibold text-blue-400 mb-3">KΔIRA Demo</h2>
-                    <p class="text-slate-400">KΔIRA'nın sesli asistanıyla canlı olarak sohbet et ve geleceğin iletişimini deneyimle.</p>
-                </div>
                 <div id="select-editor" class="choice-card glass-container rounded-2xl p-8 cursor-pointer">
                     <h2 class="text-3xl font-serif font-semibold text-purple-400 mb-3">Yapay Zeka Editör</h2>
                     <p class="text-slate-400">Fotoğraflarınızı yükleyin ve metin komutlarıyla saniyeler içinde dilediğiniz gibi düzenleyin.</p>
@@ -615,7 +611,7 @@
         </div>
     </div>
     </div>
-(    <script id="default-system-prompt">
+<script id="default-system-prompt">
 (function(){
   // Görünmez varsayılan sistem promptu: kullanıcı alanını doldurmayız,
   // sadece gönderim anında geçici olarak enjekte edip hemen geri boşaltırız.
