--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 </div>
                 <div id="select-demo" class="choice-card glass-container rounded-2xl p-8 cursor-pointer">
                     <h2 class="text-3xl font-serif font-semibold text-blue-400 mb-3">KΔIRA Demo</h2>
-                    <p class="text-slate-400">KΔIRA'nın sesli asistanıyla canlı olarak sohbet et ve geleceğin iletişimini deneyimle.</p>
+                    <p class="text-slate-400">!KΔIRA'nın sesli asistanı şuan aktif değil!</p>
                 </div>
                 <div id="select-editor" class="choice-card glass-container rounded-2xl p-8 cursor-pointer">
                     <h2 class="text-3xl font-serif font-semibold text-purple-400 mb-3">Yapay Zeka Editör</h2>
@@ -333,6 +333,10 @@
                 <div id="select-nasa" class="choice-card glass-container rounded-2xl p-8 cursor-pointer">
                     <h2 class="text-3xl font-serif font-semibold text-blue-400 mb-3">KΔIRA Gözlem Platformu</h2>
                     <p class="text-slate-400">NASA verileriyle uzayı ve Dünya’yı keşfet.</p>
+                </div>
+                <div id="select-asistan" class="choice-card glass-container rounded-2xl p-8 cursor-pointer">
+                    <h2 class="text-3xl font-serif font-semibold text-blue-400 mb-3">KΔIRA Sesli Asistan</h2>
+                    <p class="text-slate-400">!KΔIRA'nın sesli asistanıyla sohbet etmek istermisiniz?</p>
                 </div>
             </div>
         </div>
