--- a/index.html
+++ b/index.html
@@ -832,15 +832,8 @@
     console.warn('[KAIRA] Mikrofon/TTS için HTTPS önerilir.');
   }
 })();
-
 </script>
-(function(){
-  // Only inject if not already present
-  if (!document.getElementById('kaira-asistan-module')) {
-    var script = document.createElement('script');
-    script.id = 'kaira-asistan-module';
-    script.type = 'text/javascript';
-    script.text = `
+<script id="kaira-asistan-module">
 (function(){
   // Küresel görünüm durumu — var ise kullan
   window.activeView = window.activeView || 'selection';
@@ -935,7 +928,7 @@
       recognition.onstart = ()=>{ isRecording = true; micBtn.classList.remove('breathe'); micBtn.classList.add('is-listening'); statusEl.textContent='Dinliyorum...'; setCoreState('listening'); };
       recognition.onend = ()=>{ isRecording = false; micBtn.classList.remove('is-listening'); micBtn.classList.add('breathe'); if (statusEl.textContent==='Dinliyorum...') statusEl.textContent='Konuşmak için mikrofon simgesine dokunun'; setCoreState('idle'); };
       recognition.onresult = (ev)=>{ const transcript = ev.results[0][0].transcript; addMessageToChat(transcript,'user'); getAIResponse(transcript); };
-      recognition.onerror = (ev)=>{ console.error('[SR]', ev.error); statusEl.textContent = \`Hata: \${ev.error}\`; setCoreState('idle'); };
+      recognition.onerror = (ev)=>{ console.error('[SR]', ev.error); statusEl.textContent = `Hata: ${ev.error}`; setCoreState('idle'); };
     } else {
       statusEl.textContent = 'Tarayıcınız konuşma tanımayı desteklemiyor.'; micBtn.disabled = true;
     }
@@ -951,11 +944,11 @@
 
     const funFacts = [
       'Yapay zeka modelleri, insan beynindeki nöronlardan esinlenerek oluşturulan yapay sinir ağları kullanır.',
-      'İlk yapay zeka programlarından biri olan "Logic Theorist", 1956\\'da 38 matematik teoremini kendi başına kanıtladı.',
-      'Deep Blue adlı satranç bilgisayarı, 1997\\'de dünya şampiyonu Garry Kasparov\\'u yendi.',
+      'İlk yapay zeka programlarından biri olan "Logic Theorist", 1956\'da 38 matematik teoremini kendi başına kanıtladı.',
+      'Deep Blue adlı satranç bilgisayarı, 1997\'de dünya şampiyonu Garry Kasparov\'u yendi.',
       'GPT-3 modeli, 175 milyar parametre ile dönemi için devasa bir dil modeliydi.',
-      'OpenAI\\'nin DALL·E modeli, metinden görsele geçişte çığır açtı.',
-      'AlphaGo, 2016\\'da dünya şampiyonunu yenerek \\"yaratıcılık\\" tartışmasını başlattı.'
+      'OpenAI\'nin DALL·E modeli, metinden görsele geçişte çığır açtı.',
+      'AlphaGo, 2016\'da dünya şampiyonunu yenerek \"yaratıcılık\" tartışmasını başlattı.'
     ];
     const funFactBubble = document.getElementById('asistan-fun-fact');
     let waitingTimeout; let factInterval;
@@ -978,8 +971,8 @@
       const fd = new FormData(); fd.append('text', (text||'').trim()); fd.append('angry', angry ? 'true' : 'false'); fd.append('history', JSON.stringify(chatHistory.slice(-10))); fd.append('user_id', USER_ID);
       const ctrl = new AbortController(); const to = setTimeout(()=>ctrl.abort(), 300000);
       try{
-        const res = await fetch(\`\${API_BASE}/api/tts\`, { method:'POST', body: fd, signal: ctrl.signal });
-        if (!res.ok){ const txt = await res.text().catch(()=>'' ); throw new Error(\`HTTP \${res.status} \${res.statusText} — \${txt}\`); }
+        const res = await fetch(`${API_BASE}/api/tts`, { method:'POST', body: fd, signal: ctrl.signal });
+        if (!res.ok){ const txt = await res.text().catch(()=>'' ); throw new Error(`HTTP ${res.status} ${res.statusText} — ${txt}`); }
         const data = await res.json();
         if (!data.audio_data) throw new Error("API yanıtında 'audio_data' alanı bulunamadı.");
         const audioUrl = base64ToBlobUrl(data.audio_data);
@@ -999,7 +992,7 @@
     }
 
     function addMessageToChat(text, sender){
-      const b = document.createElement('div'); b.className = \`p-3 rounded-xl max-w-lg \${sender==='user' ? 'user-bubble' : 'assistant-bubble'}\`; b.textContent = text; chatContainer.appendChild(b); chatContainer.scrollTop = chatContainer.scrollHeight;
+      const b = document.createElement('div'); b.className = `p-3 rounded-xl max-w-lg ${sender==='user' ? 'user-bubble' : 'assistant-bubble'}`; b.textContent = text; chatContainer.appendChild(b); chatContainer.scrollTop = chatContainer.scrollHeight;
       if (sender){ chatHistory.push({ role: sender, content: text }); localStorage.setItem('kaira_asistan_chat_history', JSON.stringify(chatHistory)); }
     }
 
@@ -1045,16 +1038,8 @@
     }
   }, true);
 })();
-    `;
-    // Find the chat-logger script and insert before it
-    var chatLoggerScript = document.getElementById('chat-logger');
-    if (chatLoggerScript && chatLoggerScript.parentNode) {
-      chatLoggerScript.parentNode.insertBefore(script, chatLoggerScript);
-    } else {
-      document.body.appendChild(script);
-    }
-  }
-})();
+</script>
+
 <script id="chat-logger">
 (function(){
   // Sunucu kökü (senin ngrok adresin)
