--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
 #intro-container.blackhole #bh-field { opacity: 1; animation: bhFieldSpin 1.2s linear infinite, bhFieldGrow 1.1s ease-in forwards; }
 #intro-container.blackhole #ui-container { animation: bhSuck 0.9s ease-in forwards; filter: blur(0px); }
 #intro-container.blackhole #bg-canvas { animation: bhBackdrop 1.1s ease-in forwards; }
-#intro-container.blackhole { background-color: transparent; transition: background-color .35s ease; }
+      #intro-container.blackhole { background-color: transparent; transition: background-color .35s ease; }
+      /* prevent invisible intro overlay from blocking clicks */
+      #intro-container.blackhole,
+      #intro-container.fade-out {
+        pointer-events: none !important;
+      }
 
 @keyframes bhCoreGrow { 0% { transform: translate(-50%,-50%) scale(0.6); } 100% { transform: translate(-50%,-50%) scale(35); } }
 @keyframes bhFieldSpin { to { transform: translate(-50%,-50%) rotate(360deg); } }
@@ -145,15 +150,23 @@
         #fun-fact-bubble.visible { opacity: 1; transform: scale(1) translate(-50%, -100%); }
         #fun-fact-bubble::after { content: ''; position: absolute; bottom: -8px; left: 50%; transform: translateX(-50%); width: 0; height: 0; border-left: 8px solid transparent; border-right: 8px solid transparent; border-top: 8px solid rgba(55, 65, 81, 0.95); }
 
-/* KΔIRA Asistan Stilleri (yeni, çakışmasız) */
 #asistan-bg-canvas, #asistan-avatar-canvas { position: fixed; top: 0; left: 0; width: 100%; height: 100%; }
-#asistan-bg-canvas { z-index: -1; }
+#asistan-bg-canvas { z-index: -1; pointer-events: none !important; }
 #asistan-avatar-canvas { z-index: 10; pointer-events: none; }
 #asistan-fun-fact { position: fixed; background: rgba(55, 65, 81, 0.95); color: #E5E7EB; padding: 12px 16px; border-radius: 12px; max-width: 250px; font-size: 14px; z-index: 20; pointer-events: none; opacity: 0; transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out, top 1s linear, left 1s linear; transform: scale(0.9) translate(-50%, -100%); }
 #asistan-fun-fact.visible { opacity: 1; transform: scale(1) translate(-50%, -100%); }
 #asistan-fun-fact::after { content: ''; position: absolute; bottom: -8px; left: 50%; transform: translateX(-50%); width: 0; height: 0; border-left: 8px solid transparent; border-right: 8px solid transparent; border-top: 8px solid rgba(55, 65, 81, 0.95); }
 #asistan-visualizer { width: 100%; height: 60px; margin-bottom: 1rem; opacity: 0; transition: opacity 0.5s ease-in-out; }
 #asistan-mic-btn { z-index: 1; animation: breathe 3s infinite ease-in-out; }
+/* Ensure Asistan UI is always clickable above decorative layers */
+#asistan-view .glass-container,
+#asistan-view .mic-wrapper,
+#asistan-view button,
+#asistan-view [id^="asistan-"] {
+  pointer-events: auto !important;
+  position: relative;
+  z-index: 50;
+}
 /* Make asistan fixed canvases obey the reveal clip during transition */
 .reveal-mode #asistan-bg-canvas,
 .reveal-mode #asistan-avatar-canvas { position: absolute !important; }
@@ -930,12 +943,19 @@
       recognition.onresult = (ev)=>{ const transcript = ev.results[0][0].transcript; addMessageToChat(transcript,'user'); getAIResponse(transcript); };
       recognition.onerror = (ev)=>{ console.error('[SR]', ev.error); statusEl.textContent = `Hata: ${ev.error}`; setCoreState('idle'); };
     } else {
-      statusEl.textContent = 'Tarayıcınız konuşma tanımayı desteklemiyor.'; micBtn.disabled = true;
+      statusEl.textContent = 'Tarayıcınız konuşma tanımayı desteklemiyor.';
+      micBtn.disabled = false; // fallback için butonu açık bırak
     }
 
     let audioUnlocked = false; function unlockAudio(){ if (audioUnlocked) return; player.muted=true; player.play().catch(()=>{}); player.muted=false; audioUnlocked=true; setupVisualizer(); }
 
-    micBtn.addEventListener('click', ()=>{ unlockAudio(); if (isRecording){ recognition && recognition.stop(); } else { recognition && recognition.start(); } });
+    micBtn.disabled = false;
+    micBtn.addEventListener('click', ()=>{
+      console.log('[KAIRA-ASISTAN] mic clicked');
+      unlockAudio();
+      if (isRecording){ recognition && recognition.stop(); }
+      else { recognition && recognition.start && recognition.start(); }
+    });
     player.onplay = ()=>{ visualizerCanvas.style.opacity='1'; drawVisualizer(); setCoreState('speaking'); };
     player.onended = ()=>{ statusEl.textContent='Konuşmak için mikrofon simgesine dokunun'; micBtn.disabled=false; visualizerCanvas.style.opacity='0'; setCoreState('idle'); };
     clearChatBtn.addEventListener('click', ()=>{ chatHistory=[]; localStorage.removeItem('kaira_asistan_chat_history'); chatContainer.innerHTML=''; addMessageToChat('Merhaba! Size nasıl yardımcı olabilirim?', 'assistant'); });
