--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
     <!-- FOTOĞRAF EDİTÖRÜ İÇİN REACT KODU -->
     <script type="module" src="js/photo-editor.js"></script>
 
-    <script>window.API_PROXY_BASE = 'http://127.0.0.1:5005';</script>
+    <script>window.API_PROXY_BASE = 'https://1513c704aa10.ngrok-free.app';</script>
     <!-- EVRENSEL SOHBET ARAYÜZÜ İÇİN JAVASCRIPT KODU -->
     <script>
     window.initializeChatApp = () => {
