--- a/index.html
+++ b/index.html
@@ -1201,7 +1201,7 @@
     </script>
 
 
-    <!-- intro-controls.js GSAP gerektiriyordu; kaldırıldı (intro-animation.js yeterli) -->
+    <script type="module" src="js/intro-controls.js"></script>
     <script type="module" src="js/exoplanet-map.js"></script>
     <script type="module" src="js/nasa-apod.js"></script>
     <script type="module" src="js/intro-animation.js"></script>
