--- a/index.html
+++ b/index.html
@@ -591,12 +591,21 @@
                 name: 'Groq',
                 apiEndpoint: 'https://api.groq.com/openai/v1/chat/completions',
                 models: [
-                    'llama-3.1-8b-instant','llama-3.3-70b-versatile','meta-llama/llama-guard-4-12b',
-                    'openai/gpt-oss-120b','openai/gpt-oss-20b','deepseek-r1-distill-llama-70b',
-                    'meta-llama/llama-4-maverick-17b-128e-instruct','meta-llama/llama-4-scout-17b-16e-instruct',
-                    'meta-llama/llama-prompt-guard-2-22m','meta-llama/llama-prompt-guard-2-86m',
-                    'moonshotai/kimi-k2-instruct','qwen/qwen3-32b','llama3-70b-8192', 
-                    'llama3-8b-8192', 'mixtral-8x7b-32768', 'gemma-7b-it'
+                    'openai/gpt-oss-120b',
+                    'openai/gpt-oss-20b',
+                    'llama-3.3-70b-versatile',
+                    'meta-llama/llama-guard-4-12b',
+                    'moonshotai/kimi-k2-instruct',
+                    'deepseek-r1-distill-llama-70b',
+                    'meta-llama/llama-4-maverick-17b-128e-instruct',
+                    'meta-llama/llama-4-scout-17b-16e-instruct',
+                    'meta-llama/llama-prompt-guard-2-22m',
+                    'meta-llama/llama-prompt-guard-2-86m',
+                    'qwen/qwen3-32b',
+                    'llama3-70b-8192', 
+                    'llama3-8b-8192', 
+                    'mixtral-8x7b-32768', 
+                    'gemma-7b-it'
                 ]
             },
             google: {
