--- a/index.html
+++ b/index.html
@@ -318,9 +318,10 @@
                             <div class="text-gray-300 font-medium">AI Yardım</div>
                             <div class="text-xs text-gray-400" id="cl-model-info">Model listesi yükleniyor…</div>
                         </div>
-                        <div class="grid grid-cols-2 gap-2">
+                        <div class="grid grid-cols-3 gap-2">
                             <select id="cl-model" class="bg-gray-900 border border-gray-700 rounded p-2 text-gray-100 text-sm"></select>
                             <button id="cl-generate" class="px-3 py-2 text-sm rounded bg-indigo-600 text-white">Öneri Üret</button>
+                            <button id="cl-apply" class="px-3 py-2 text-sm rounded bg-emerald-600 text-white">Kodu Uygula</button>
                         </div>
                         <textarea id="cl-prompt" rows="4" class="w-full bg-gray-900 text-gray-100 rounded p-2 text-sm" placeholder="Ne yapmak istiyorsun? Örn: 'Merkezde dönen bir yıldız alanı çiz'">
 Önce mevcut dosyaları analiz et, gerekirse yeni dosya öner. Yalnızca gerekli kodu üret.
