--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@
                             <select id="cl-model" class="bg-gray-900 border border-gray-700 rounded p-2 text-gray-100 text-sm"></select>
                             <button id="cl-generate" class="px-3 py-2 text-sm rounded bg-indigo-600 text-white">Öneri Üret</button>
                             <button id="cl-apply" class="px-3 py-2 text-sm rounded bg-emerald-600 text-white">Kodu Uygula</button>
+                            <button id="cl-undo" class="px-3 py-2 text-sm rounded bg-amber-600 text-black">Geri Al</button>
                         </div>
                         <textarea id="cl-prompt" rows="4" class="w-full bg-gray-900 text-gray-100 rounded p-2 text-sm" placeholder="Ne yapmak istiyorsun? Örn: 'Merkezde dönen bir yıldız alanı çiz'">
 Önce mevcut dosyaları analiz et, gerekirse yeni dosya öner. Yalnızca gerekli kodu üret.
