--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       </div>
     </div>
   </div>
-  <audio id="asistan-player" class="hidden" crossOrigin="anonymous"></audio>
+  <audio id="asistan-player" class="hidden" crossOrigin="anonymous" playsinline></audio>
 </div>
 </div>
     <!-- FOTOĞRAF EDİTÖRÜ GÖRÜNÜMÜ -->
