--- a/index.html
+++ b/index.html
@@ -163,12 +163,22 @@
 
     
 <!-- KΔIRA SESLİ ASİSTAN GÖRÜNÜMÜ (YENİ) -->
-<div id="asistan-view" class="view">
-  <button class="back-to-selection fixed top-5 left-5 z-50 text-slate-400 hover:text-white transition-colors bg-black/20 backdrop-blur-md p-3 rounded-full">
+  <div id="asistan-view" class="view">
+    <button class="back-to-selection fixed top-5 left-5 z-50 text-slate-400 hover:text-white transition-colors bg-black/20 backdrop-blur-md p-3 rounded-full">
     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path></svg>
   </button>
   <div class="flex items-center justify-center min-h-screen text-white p-4">
-    <div class="w-full max-w-2xl mx-auto glass-container rounded-2xl shadow-2xl flex flex-col p-6" style="height: 90vh;">
+    <div class="w-full max-w-2xl mx-auto glass-container rounded-2xl shadow-2xl flex flex-col p-6 relative" style="height: 90vh;">
+      <!-- Asistan Yetki Kilidi (Şifre) -->
+      <div id="asistan-auth-overlay" class="absolute inset-0 z-40 flex items-center justify-center bg-black/80" style="display:none;">
+        <div class="w-full max-w-sm bg-gray-900 border border-gray-700 rounded-2xl p-6 text-center shadow-xl">
+          <h3 class="text-xl font-semibold text-white mb-2">Yetkili Şifrenizi Girin</h3>
+          <p class="text-sm text-gray-400 mb-4">Sesli Asistan kullanımı yetkililerle sınırlıdır.</p>
+          <input id="asistan-auth-input" type="password" placeholder="Şifre" class="w-full bg-gray-800 border border-gray-700 rounded-lg px-3 py-2 text-white mb-3 focus:outline-none focus:ring-2 focus:ring-indigo-500" />
+          <button id="asistan-auth-submit" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-semibold px-4 py-2 rounded-lg">Giriş</button>
+          <div id="asistan-auth-msg" class="text-sm text-rose-400 mt-3 min-h-[1.25rem]"></div>
+        </div>
+      </div>
       <div class="relative text-center border-b border-gray-700/50 pb-2 mb-4" style="height: 70px;">
         <p id="asistan-status" class="text-sm text-cyan-400 h-5 transition-all duration-300 mt-1">Konuşmak için mikrofon simgesine dokunun</p>
         <button id="asistan-clear-chat-btn" title="Sohbeti Temizle" class="absolute top-1 right-0 text-gray-500 hover:text-white transition-colors p-2">
