--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <p class="text-lg md:text-xl text-slate-400 mb-12 max-w-2xl">Lütfen deneyimlemek istediğin projeyi seç.</p>
             <div class="grid md:grid-cols-2 gap-8 w-full max-w-5xl">
                 <div class="absolute top-6 right-6">
-                  <button id="auth-open" class="bg-slate-800/70 hover:bg-slate-700 text-slate-200 border border-slate-600 px-4 py-2 rounded-lg shadow">Üyelik</button>
+                  <a id="auth-open" href="profile.html" class="bg-slate-800/70 hover:bg-slate-700 text-slate-200 border border-slate-600 px-4 py-2 rounded-lg shadow">Üyelik</a>
                 </div>
                 <div id="select-afterlife" class="choice-card glass-container rounded-2xl p-8 cursor-pointer">
                     <h2 class="text-3xl font-serif font-semibold text-cyan-400 mb-3">Digital Afterlife</h2>
