--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,12 @@
     </div>
   </div>
 
+  <script>
+    // Try to recover API base from localStorage if not defined on this page
+    if (!window.API_PROXY_BASE) {
+      try { window.API_PROXY_BASE = localStorage.getItem('kaira_api_base') || ''; } catch(_){ }
+    }
+  </script>
   <script type="module">
     const API = ()=> (window.API_PROXY_BASE || '').replace(/\/$/, '');
     const nameEl = document.getElementById('c_name');
@@ -68,8 +74,9 @@
       };
       if (!payload.name || !payload.subject || !payload.message){ out.textContent='Lütfen gerekli alanları doldurun.'; out.className='text-sm text-rose-400'; return; }
       try{
-        const base = API(); if (!base){ out.textContent='Sunucu tanımlı değil'; out.className='text-sm text-rose-400'; return; }
-        const res = await fetch(`${base}/api/contact`, { method:'POST', headers:{ 'Content-Type':'application/json' }, body: JSON.stringify(payload) });
+        const base = API();
+        const url = `${base ? base : ''}/api/contact`;
+        const res = await fetch(url, { method:'POST', headers:{ 'Content-Type':'application/json' }, body: JSON.stringify(payload) });
         if (!res.ok){ out.textContent='Gönderim başarısız'; out.className='text-sm text-rose-400'; return; }
         out.textContent='Mesajınız alındı. Teşekkürler!'; out.className='text-sm text-emerald-400';
         subjEl.value=''; msgEl.value='';
