--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
     <!-- FOTOĞRAF EDİTÖRÜ İÇİN REACT KODU -->
     <script type="module" src="js/photo-editor.js"></script>
 
-    <script>window.API_PROXY_BASE = 'https://1513c704aa10.ngrok-free.app';</script>
+    <script>window.API_PROXY_BASE = 'https://1513c704aa10.ngrok-free.app'; try{ localStorage.setItem('kaira_api_base', window.API_PROXY_BASE); }catch(_){ }</script>
     <!-- EVRENSEL SOHBET ARAYÜZÜ İÇİN JAVASCRIPT KODU -->
     <script>
     window.initializeChatApp = () => {
